[WFCORE-6662] Remove deprecated usage of ServiceController.getValue() by capturing ModelControllerClientFactory via ServiceActivator starting the Bootable JAR and Embedded server Jira issue: https://issues.redhat.com/browse/WFCORE-6662